Change BOT_TOKEN in .env file
Updated BOT_TOKEN to a new value.

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-BOT_TOKEN=abc-123
+BOT_TOKEN=MTQyMjcwMDUzMzI4MTQ1NjMwMA.G_QQaQ.SFzDDmW5x27dqTfgQa_cWW7VRA5DYfYp9uDTOc
 UNANSWERED_TAG_ID=1272616733278212249
 NOT_SOLVED_TAG_ID=1272616775707787328
 SOLVED_TAG_ID=1023659052301033532
